# freshos

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  run-arm.sh  run-demo.sh  run.sh  rust-toolchain.toml
.cargo/: config.toml
docs/: Boot-Walkthrough.md  FreshOS-Demo-Script.md  FreshOS-Manifesto.md  FreshOS-v1-Scope.md  Syscall-Flow.md  Where-We-Are.md
docs/decisions/: 0001-useful-means-observable.md
docs/plans/: 2026-04-02-feat-aarch64-port-architecture-abstraction-plan.md  2026-04-02-feat-virtio-gpu-driver-plan.md  2026-04-12-apple-silicon-demo-execution-plan.md  2026-04-13-m1-service-runtime-tickets.md  2026-04-13-useful-os-roadmap.md
kernel/: Cargo.toml
kernel/src/: arm_tasks.rs  elf.rs  font.rs  font_aa.rs  frame_alloc.rs  framebuffer.rs  gdt.rs  heap.rs  idt.rs  init_abi.rs  ipc.rs  keyboard.rs  main.rs  metrics.rs  mouse.rs  paging.rs  pic.rs  scheduler.rs  scripting.rs  serial.rs  service_abi.rs  speaker.rs  syscall.rs  task_names.rs  tsc.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: context.rs  exception.s  exceptions.rs  gic.rs  mod.rs  paging.rs  syscall.rs  timer.rs  virtio_gpu.rs
kernel/src/arch/x86_64/: acpi.rs  mod.rs  pci.rs  virtio_gpu.rs
userbins/fault/: Cargo.toml
userbins/fault/src/: main.rs
userbins/init/: Cargo.toml
userbins/init/src/: main.rs
userbins/pong/: Cargo.toml
userbins/pong/src/: main.rs
userbins/pulse/: Cargo.toml
userbins/pulse/src/: main.rs
